crates/plotnik-lib/tests/snapshots/conformance__untagged_alt_captured_group_branch_nulls_sibling.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program [(((expression_statement) @a) @grp) ((comment) @b)] @w)

==== source ====
a;

==== types ====
export interface QGrp {
  a: Node;
}

export interface Qw {
  b: Node | null;
  grp: QGrp | null;
}

export interface Q {
  w: Qw;
}

==== result ====
{"w":{"b":null,"grp":{"a":{"kind":"expression_statement","text":"a;","span":[0, 2]}}}}
