crates/plotnik-lib/tests/snapshots/conformance__up_anchor_accepts_anonymous_operand_as_last_child.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (debugger_statement "debugger" .))

==== source ====
debugger /* c */

==== types ====
export type Q = undefined;

==== result ====
null
