crates/plotnik-lib/tests/snapshots/conformance__up_anchor_rejects_trailing_anonymous_token.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (debugger_statement "debugger" .))

==== source ====
debugger;

==== types ====
export type Q = undefined;

==== result ====
<no match>
