crates/plotnik-lib/tests/snapshots/conformance__up_anchor_rejects_trailing_named_node.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (identifier == "a")) .)

==== source ====
a; b;

==== types ====
export type Q = undefined;

==== result ====
<no match>
