crates/plotnik-lib/tests/snapshots/conformance__up_anchor_skips_trailing_comment.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (identifier == "a")) .)

==== source ====
a; /* c */

==== types ====
export type Q = undefined;

==== result ====
null
