crates/plotnik-lib/tests/snapshots/conformance__up_strict_anchor_accepts_literal_last_child.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (identifier == "a") .!))

==== source ====
a

==== types ====
export type Q = undefined;

==== result ====
null
